--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 
 	<link href="css/smoothState.css" rel="stylesheet">
-
-	<link href="css/jquery.tagsinput.css" rel="stylesheet">
 
 
     <script type="text/javascript" charset="utf-8" src="lib/jquery.min.js"></script>
@@ -19,116 +16,73 @@
 
 	<script type="text/javascript" src="lib/masonry.pkgd.min.js"></script>
 
-	<script type="text/javascript" src="lib/jquery.tagsinput.js"></script>
 
+	<title>CarSeva</title>
+	<style type="text/css">
+		.white{
+			color: white;
+		}
 
-<title>CarSeva</title>
-
-<style>
-.thumbnails{
-	float:left;
-}
-	
-.thumbnail{
-	width:30%;
-	height:35%;
-	margin-top:3%;
-	margin-left:2%;
-	float:left;
-	
-}
-
-.well {
-	width:100%;
-	height:100%;
-}
-
-div.thumbnail {
-    position: relative;
-    /*width: 200px;
-    height: 200px;*/
-    background: #F8F8F8;
-    color: #000;
-    padding: 20px;    
-}
- 
-div.thumbnail:hover {
-    cursor: hand;
-    cursor: pointer;
-    opacity: .9;
-}
- 
-a.divLink {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    text-decoration: none;
-    z-index: 10;
-    background-color: white;
-    opacity: 0;
-    filter: alpha(opacity=0);
-}
-
-</style>
-
-<script>
-
-$(document).ready(function(){
-
-	for(var i=1;i<=6;i++){
-        var div = '<div class="thumbnail"><div style="height:100%;width:100%;overflow:hidden;"><img src="images/'+i+'.jpg" height="100%" width="100%"></div><a class="divLink" id="'+i+'"></a></div>';
-        $("#thumbnails").append(div);   
-    }
-
-	$(".thumbnail").click(function(){
-        var clicked = $(this).find("a:first").attr("id");
-        clearContainer();               
-        detailsPage(clicked);
-    });
-
-    $("#carseva").click(function(){
-    	location.reload();
-    });
-
-});
-
-function clearContainer(){
-    $("div .thumbnail").remove();
-}
-
-function detailsPage(clicked){
-	$("#thumbnails").append("<p>This is the details page</p>")
-}
-
-
-</script>
+		.join-btn{
+			  	font-weight: bold;
+  				border-width: 1px;
+  				border-style: solid;
+  				cursor: pointer;
+  				margin: 0;
+  				overflow: visible;
+  				text-decoration: none !important;
+  				text-align: center;
+  				text-shadow: 0 1px 1px rgba(255,255,255,0.75);
+  				border-radius: 3px;
+  				padding: 0 15px;
+  				height: 34px;
+  				line-height: 32px;
+  				-webkit-box-sizing: border-box;
+  				-moz-box-sizing: border-box;
+  				-box-sizing: border-box;
+  				font-size: 16px;
+  				color: #333;
+  				background-color: #f6e312;
+  				border-color: #e9ac1a;
+  				zoom: 1;
+  				vertical-align: middle;
+  				width: 100%;
+ 				margin-top: 15px;
+  				margin-bottom: 0;
+		}
+	</style>
 </head>
 <body>
-	<div class="container">
-		<br>
-		<!--<button class="btn btn-sm pull-left btn-info" style="margin-right:2%;" id="goBack">Go Back</button>-->
-		<a id="carseva" style="cursor:hand;margin-top:45px;position:absolute;">CarSeva</a><br>
+	<div class="page-header" style="background-color:#333;margin-top:-20px">
+		<button class="btn btn-sm default pull-right" style="margin-top:3%;margin-left:1%;margin-right:2%;background-color:#a9a9a9">Sign In</button>
+		<input type="password" class="pull-right" placeholder="  Password" id="password" style="margin-top:3%;margin-left:1%;">
+		<input type="text" class="pull-right" placeholder="  Mobile Number" id="mobile" style="margin-top:3%;">
+		<br><br>
+  		<h1><span style="margin-left:5%;color:white;margin-top:2%;">Car</span><span style="color:#cc0033;">Seva</span></h1>
 
-		<div class="col-lg-12" style="margin-top:100px;position:relative;">
-    		<div class="input-group">
-      			<input type="text" class="form-control" placeholder="Search for...">
-      			<span class="input-group-btn">
-        			<button class="btn btn-default" type="button">Search!</button>
-      			</span>
-    		</div><!-- /input-group -->
-  		</div><!-- /.col-lg-6 -->
-  		<br><br><br><br><br>
-  		<!--Masonry Container starts here-->
-  		<div class="row" style="margin-top:5%; background-color:#E0E0E0;">
-            <div class = "tiles">
-                <div class="masonry-container" id="thumbnails">
+	</div>
+	<div class="container">
+		<div class="row">
+            <div class="col-sm-6 col-md-4 col-md-offset-4" style="background-color:#686868;margin-top:2%;">
+                <h1 class="text-center login-title white">Sign Up</h1>
+                <div class="account-wall">
+                    <form class="form-signin">
+                        <input type="text" placeholder="Name" id="signupName" class="form-control"></input><br/>
+                        <input type="text" placeholder="Email Id" id="signupEmail" class="form-control"></input><br/>
+                        <input type="text" placeholder="Mobile Number" id="signupMobile" class="form-control"></input><br>
+                        <input type="password" placeholder="Password" id="signupPwd" class="form-control"></input><br/>
+                        <input type="password" placeholder="Confirm Password" id="signupConfpwd" class="form-control"></input><br/>
+                        
+                        <button id="siteEngr_save" class="btn btn-lg btn-primary join-btn">Join now</button>
+                        <br><br>
+
+                    </form>
                 </div>
             </div>
         </div>
 
 
+		<!--Footer starts from here-->
 		<nav class="navbar navbar-default navbar-fixed-bottom">
   			<div class="container" style="width:100%;">
    				<ul class="nav navbar-nav" style="width:100%;">
@@ -148,4 +102,3 @@ function detailsPage(clicked){
 	</div>
 </body>
 </html>
-
